# discord-py-template

./: README.md  config.example.json  pyproject.toml
bot/: __main__.py  my_bot.py
bot/utils/: setup.py
src/: bot.py
src/cogs/commands/: debug.py
src/cogs/core/: events.py
src/util/: code.py  setup.py
