[tool.poetry]
name = "discord-py-template"
version = "1.0.0"
description = "A template for making Discord bots with Discord.py"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.3"
"discord.py" = "^1.7.3"
classy-json = "^3.2.1"
discord-pretty-help = "^1.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
